--- a/set1/Makefile
+++ b/set1/Makefile
@@ -1,12 +1,36 @@
 .POSIX:
 include ../inc.mk
 
-EXECS = c1 c2 c3 c4 c5
+CS = c1 c2 c3 c4 c5 c6 c7 c8
 
-all: $(EXECS)
+all: $(CS)
 
-$(EXECS):
-	$(CC) $(CFLAGS) -o $@ $@.c
+c1: c1.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o c1 c1.o
+
+c1.o: c1.cpp base64.h ../error.h
+	$(CXX) $(CXXFLAGS) -c c1.cpp
+
+c2:
+	echo
+
+c3:
+	echo
+
+c4:
+	echo
+
+c5:
+	echo
+
+c6:
+	echo
+
+c7:
+	echo
+
+c8:
+	echo
 
 clean:
-	rm -f $(EXECS)
+	rm -f $(CS) *.o
