--- a/set1/Makefile
+++ b/set1/Makefile
@@ -17,8 +17,11 @@ c2: c2.o
 c2.o: c2.cpp hex.h ../error.h
 	$(CXX) $(CXXFLAGS) -c c2.cpp
 
-c3:
-	echo
+c3: c3.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o c3 c3.o
+
+c3.o: c3.cpp hex.h ../error.h
+	$(CXX) $(CXXFLAGS) -c c3.cpp
 
 c4:
 	echo
