Revert "Refactor c4 in c++"
This reverts commit 6821df04ac3c4368888344b2610c32f8a45f3a84.

--- a/set1/Makefile
+++ b/set1/Makefile
@@ -23,11 +23,8 @@ c3: c3.o
 c3.o: c3.cpp hex.h ../error.h
 	$(CXX) $(CXXFLAGS) -c c3.cpp
 
-c4: c4.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o c4 c4.o
-
-c4.o: c4.cpp hex.h ../error.h
-	$(CXX) $(CXXFLAGS) -c c4.cpp
+c4:
+	echo
 
 c5:
 	echo
