Revert "Refactor c3 in c++"
This reverts commit 8b92d4624929d979975bdfa2c15d27bff176ca22.

--- a/set1/Makefile
+++ b/set1/Makefile
@@ -17,11 +17,8 @@ c2: c2.o
 c2.o: c2.cpp hex.h ../error.h
 	$(CXX) $(CXXFLAGS) -c c2.cpp
 
-c3: c3.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o c3 c3.o
-
-c3.o: c3.cpp hex.h ../error.h
-	$(CXX) $(CXXFLAGS) -c c3.cpp
+c3:
+	echo
 
 c4:
 	echo
