Revert "Refactor c1 in c++"
This reverts commit 4ea21452a8906165f806e8f9c4ee6b7a7697b46e.

--- a/set1/Makefile
+++ b/set1/Makefile
@@ -1,36 +1,12 @@
 .POSIX:
 include ../inc.mk
 
-CS = c1 c2 c3 c4 c5 c6 c7 c8
+EXECS = c1 c2 c3 c4 c5
 
-all: $(CS)
+all: $(EXECS)
 
-c1: c1.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o c1 c1.o
-
-c1.o: c1.cpp base64.h ../error.h
-	$(CXX) $(CXXFLAGS) -c c1.cpp
-
-c2:
-	echo
-
-c3:
-	echo
-
-c4:
-	echo
-
-c5:
-	echo
-
-c6:
-	echo
-
-c7:
-	echo
-
-c8:
-	echo
+$(EXECS):
+	$(CC) $(CFLAGS) -o $@ $@.c
 
 clean:
-	rm -f $(CS) *.o
+	rm -f $(EXECS)
