Refactor base64 stuff into separate file

--- a/set01/Makefile
+++ b/set01/Makefile
@@ -1,9 +1,15 @@
 .POSIX:
 include ../inc.mk
 
-CS = c01 c02 c03 c04 c05
+CS = c02 c03 c04 c05
 
 all: $(CS)
+
+c01: c01.o
+	$(CC) $(CFLAGS) -o c01 c01.o
+
+c01.o: c01.c base64.h ../error.h
+	$(CC) $(CFLAGS) -c c01.c
 
 $(CS):
 	$(CC) $(CFLAGS) -o $@ $@.c
