Add debug stuff

--- a/set01/Makefile
+++ b/set01/Makefile
@@ -5,14 +5,20 @@ CS = c02 c03 c04 c05
 
 all: $(CS)
 
+debug: CFLAGS += -DDEBUG
+debug: $(CS)
+
 c01: c01.o
 	$(CC) $(CFLAGS) -o c01 c01.o
 
 c01.o: c01.c base64.h ../error.h
-	$(CC) $(CFLAGS) -c c01.c
 
 $(CS):
 	$(CC) $(CFLAGS) -o $@ $@.c
 
 clean:
-	rm -f $(CS)
+	rm -f $(CS) *.o
+
+.SUFFIXES: .c .o
+.c.o:
+	$(CC) $(CFLAGS) -c $<
