Use error.h in other files

--- a/set01/Makefile
+++ b/set01/Makefile
@@ -1,7 +1,7 @@
 .POSIX:
 include ../inc.mk
 
-CS = c02 c03 c04 c05
+CS = c01 c02 c03 c04 c05
 
 all: $(CS)
 
@@ -17,8 +17,25 @@ c01: c01.o base64.o hex.o
 
 c01.o: c01.c base64.h hex.h ../error.h
 
-$(CS):
-	$(CC) $(CFLAGS) -o $@ $@.c
+c02: c02.o
+	$(CC) $(CFLAGS) -o $@ $^
+
+c02.o: c02.c ../error.h
+
+c03: c03.o
+	$(CC) $(CFLAGS) -o $@ $^
+
+c03.o: c03.c ../error.h
+
+c04: c04.o
+	$(CC) $(CFLAGS) -o $@ $^
+
+c04.o: c04.c ../error.h
+
+c05: c05.o
+	$(CC) $(CFLAGS) -o $@ $^
+
+c05.o: c05.c ../error.h
 
 clean:
 	rm -f $(CS) *.o
