Add challenge 7 solution

--- a/cryptopals/Makefile
+++ b/cryptopals/Makefile
@@ -17,6 +17,8 @@ LIB       = $(LIB_DIR)/$(NAME).a
 LIB_SRCS  = $(wildcard $(SRC_DIR)/*.c)
 LIB_OBJS  = $(patsubst %.c,$(OBJ_DIR)/%.o,$(notdir $(LIB_SRCS)))
 
+DEPS      = -lssl -lcrypto
+
 SETS      = set01
 
 
@@ -57,7 +59,7 @@ SET01      = $(notdir $(basename $(SET01_SRCS)))
 
 set01: $(SET01)
 
-$(SET01): %: $(OBJ_DIR)/%.o $(LIB)
+$(SET01): %: $(OBJ_DIR)/%.o $(LIB) $(DEPS)
 	@[ -d $(BIN_DIR) ] || mkdir -p $(BIN_DIR)
 	$(CC) $(CFLAGS) -o $(BIN_DIR)/$@ $^
 
@@ -65,6 +67,8 @@ $(SET01_OBJS): $(OBJ_DIR)/%.o: $(SRC_DIR)/set01/%.c
 	@[ -d $(OBJ_DIR) ] || mkdir -p $(OBJ_DIR)
 	$(CC) $(CFLAGS) -o $@ -c $^
 
+
+.PHONY: clean $(DEPS)
 
 clean:
 	rm -rf $(BUILD_DIR)
